# midas-with-yolov5

./: .gitignore  LICENSE  README.md  depth-anything-v2-coral-test.py  depth-with-object-detection-midas.py  requirements.txt  take-pictures-for-calibration.py  yolov5-coral-test.py
rockchip-npu/: CMakeCache.txt  CMakeLists.txt  Makefile  aarch64-linux-gnu.cmake  cmake_install.cmake
rockchip-npu/include/: httplib.h
rockchip-npu/src/: main.cpp
